--- a/index.html
+++ b/index.html
@@ -24,14 +24,13 @@
         <div class="row flex flex-center">
             <div id="mastermind-area"></div>
             <div id="button area">
-                <button>Escaped!</button>
                 <button id="fight-modal-btn" class="btn m-10 waves-effect waves-light modal-trigger"
                     href="#fightModal">Fight!</button>
                 <button id="other-fought" class="btn m-10 waves-effect waves-dark">Other player fought</button>
             </div>
             <div>
                 <div id="fightModal" class="modal">
-                    <div id="fight-modal-content" class="modal-content flex flex-center">
+                    <div id="fight-modal-content" class="modal-content flex flex-center flex-wrap">
 
                     </div>
                     <div class="modal-footer">
@@ -43,7 +42,7 @@
         </div>
 
         <!-- City section -->
-        <div class="black-box">
+        <div class="">
             <div class="flex flex-center">
                 <div class="city-space">
                     <h4>Bridge</h4>
