--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
                 <button id="fight-modal-btn" class="btn m-10 waves-effect waves-light modal-trigger"
                     href="#fightModal">Fight!</button>
                 <button id="other-fought" class="btn m-10 waves-effect waves-dark">Other player fought</button>
+                <button id="view-cards-btn" class="btn m-10 waves-effect waves-dark modal-trigger" href="#view-modal">View Cards</button>
             </div>
             <div>
                 <div id="fightModal" class="modal">
@@ -36,6 +37,12 @@
                     <div class="modal-footer">
                         <button id="fight-done"
                             class="btn red lighten-1 m-10 modal-close waves-effect waves-purple">Done</button>
+                    </div>
+                </div>
+                <div id="view-modal" class="modal">
+                    <div id="view-modal-content" class="modal-content flex flex-center flex-wrap"></div>
+                    <div class="modal-footer">
+                        <button class="btn m-10 modal-close">Close</button>
                     </div>
                 </div>
             </div>
